@@ -1,5 +1,8 @@
 2002-02-05  Ulrich Drepper  <drepper@redhat.com>
 
+	* dlfcn/Makefile: Add rules to build and run bug-dlopen1.
+	* dlfcn/bug-dlopen1.c: New file.  By Bruno Haible.
+
 	* elf/rtld.c (process_dl_debug): Correct printing help message.
 	* elf/dl-misc.c (_dl_debug_vdprintf): Implement precision handling
 	for %s.
